--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "activationEvents": [
     "*"
   ],
+  "publisher": "yudai1204",
+  "icon": "icon.png",
   "contributes": {
     "commands": [
       {
